fix: registration email OTP with 3-attempt brute-force protection and robust forgot-password flow